Make the readme a homepage

--- a/web/pages/docs/index.mdx
+++ b/web/pages/docs/index.mdx
@@ -8,7 +8,7 @@ import DocsLayout from "../../layouts/docs";
 
 If you prefer **training scripts and the CLI**, [follow the our tutorial to learn how Replicate works](/docs/tutorial).
 
-If you prefer **working in notebooks**, <a href={process.env.TUTORIAL_COLAB_URL}>follow our notebook tutorial on Colab</a>.
+If you prefer **working in notebooks**, <a href={process.env.TUTORIAL_COLAB_URL} target="_blank">follow our notebook tutorial on Colab</a>.
 
 If you like to **learn concepts first**, [read our guide about how Replicate works](/docs/learn/how-it-works).
 
