Add training data documentation

--- a/web/pages/docs/tutorial.mdx
+++ b/web/pages/docs/tutorial.mdx
@@ -270,6 +270,7 @@ You don't have to keep track of what you changed in your experiments, because Re
 Next, you might want to:
 
 - [Read our guide about storing experiment data in the cloud](/docs/guides/cloud-storage) so you can train on multiple machines and collaborate with others.
+- [Learn how to version training data.](/docs/guides/training-data)
 - <a href={process.env.ANALYSIS_COLAB_URL} target="_blank">
     Learn how to do analysis &amp; vizualization in notebooks.
   </a>
