--- a/web/pages/docs/guides/cloud-storage.mdx
+++ b/web/pages/docs/guides/cloud-storage.mdx
@@ -59,9 +59,9 @@ repository: "gs://replicate-repository-[your model name]"
 First, you need to install and configure the Amazon Web Services CLI if you haven't already. The easiest way to do this on macOS is to install it with Homebrew:
 
 1. If you haven't already, install [Homebrew](https://brew.sh/).
-1. Run `brew install aws`
+1. Run `brew install awscli`
 1. If you haven't already got an Amazon Web Services account, [sign up for Amazon Web Services](https://aws.amazon.com/free/).
-1. Run `aws configure` and [follow these instructions to configure it](https://docs.aws.amazon.com/cli/latest/userguide/cli-configure-quickstart.html). You will need to get an access key ID and secret access key and set the region to `us-east-1`. You don't need to set an output format, or profile.
+1. Run `aws configure` and [follow these instructions to configure it](https://docs.aws.amazon.com/cli/latest/userguide/cli-configure-quickstart.html). You will need to get an access key ID and secret access key and set the region to `us-east-1` (unless you want to use a particular region). You don't need to set an output format, or profile.
 
 If you're on another platform, [follow these instructions to install the Amazon Web Services CLI](https://docs.aws.amazon.com/cli/latest/userguide/install-cliv2.html).
 
