Allow passing className to CodeBlock

--- a/web/pages/docs/index.mdx
+++ b/web/pages/docs/index.mdx
@@ -34,7 +34,7 @@ Next, you might want to:
 
 We recommend using `requirements.txt`, so other people who use your code will get Replicate installed automatically. Add this to your `requirements.txt` file, or create a new one:
 
-<CodeBlock className="txt" copyButton={true}>
+<CodeBlock language="txt" copyButton={true}>
   {`replicate==` +
     process.env.NEXT_PUBLIC_VERSION +
     `
@@ -50,4 +50,3 @@ pip install -r requirements.txt
 -->
 
 </DocsLayout>
-
