Make inference examples an image
From https://colab.research.google.com/drive/1BlGr4i1mrGRua-hL9JIHzBW30tz_zQr9

--- a/web/pages/docs/learn/how-it-works.mdx
+++ b/web/pages/docs/learn/how-it-works.mdx
@@ -69,10 +69,7 @@ You can also use the **Python library** to access this information:
 
 The Python library can also load saved models to run inferences:
 
-```python
-import replicate
-model = torch.load(replicate.experiments.get("b7c7f17").best().open("model.pth"))
-```
+<img src="/images/inference.png" width="800" />
 
 <!-- TODO(bfirsh): replace with real inference
 
