Document incomplete data docs

--- a/web/pages/docs/guides/training-data.mdx
+++ b/web/pages/docs/guides/training-data.mdx
@@ -1,4 +1,5 @@
 import DocsLayout from "../../../layouts/docs";
+import Note from "../../../components/note";
 
 <DocsLayout title="Version training data">
 
@@ -63,6 +64,13 @@ This assumes you are disciplined about versioning your data and the contents of 
 
 Then, if the data changes, you will see a different shasum in `replicate diff`, and you will know an experiment was trained on different data.
 
+<Note>
+
+
+**Note:** This documentation is incomplete. We'd love to hear about ways that you are versioning data. See [this GitHub issue](https://github.com/replicate/replicate/issues/359) or [chat to us in Discord](https://discord.gg/QmzJApGjyE).
+
+</Note>
+
+
 </DocsLayout>
 ```
-
