Remove install page again
That didn't work.

Signed-off-by: Ben Firshman <ben@firshman.co.uk>

--- a/web/pages/docs/index.mdx
+++ b/web/pages/docs/index.mdx
@@ -4,6 +4,16 @@ import DocsLayout from "../../layouts/docs";
 <DocsLayout>
 
 
+## Install
+
+Replicate is a Python package. Run this to install it:
+
+```
+pip install -U replicate
+```
+
+That's it! This has installed both the [Python library](/docs/reference/python) and the [command-line interface](/docs/reference/cli).
+
 ## First steps
 
 If you prefer **training scripts and the CLI**, [follow the our tutorial to learn how Replicate works](/docs/tutorial).
