fix typo and duplicate wording on docs page

--- a/web/pages/docs/index.mdx
+++ b/web/pages/docs/index.mdx
@@ -16,7 +16,7 @@ That's it! This has installed both the [Python library](/docs/reference/python) 
 
 ## First steps
 
-If you prefer **training scripts and the CLI**, [follow the our tutorial to learn how Replicate works](/docs/tutorial).
+If you prefer **training scripts and the CLI**, [follow our 10 minute tutorial to get started](/docs/tutorial).
 
 If you prefer **working in notebooks**, <a href={process.env.TUTORIAL_COLAB_URL} target="_blank">follow our notebook tutorial on Colab</a>.
 
