--- a/web/pages/docs/reference/cli.mdx
+++ b/web/pages/docs/reference/cli.mdx
@@ -22,7 +22,23 @@ To install the command-line interface, [see the installation instructions](/docs
 
 ## `replicate analytics`
 
-Enable or disable analytics
+The Replicate CLI sends anonymous analytics about commands you run.
+
+The following data is sent on each command line invokation:
+- A random token for the machine (e.g. "9f3027bb-0eb8-917d-e5bf-c6c1bdb1fd0a")
+- The subcommand you ran, without any options or arguments
+  (e.g. "replicate run", not "replicate run python secretproject.py")
+- The Replicate version (e.g. "1.0.0")
+- Your CPU architecture (e.g. "amd64")
+- Your operating system (e.g. "linux")
+
+To learn more, please refer to https://replicate.ai/docs/learn/analytics
+
+These analytics really help us, and we'd really appreciate it if you left it on.
+But, if you want to opt out, you can run this command:
+
+replicate analytics off
+
 
 ### Usage
 
