Add refresh() method to experiments
Signed-off-by: Ben Firshman <ben@firshman.co.uk>

--- a/web/pages/docs/reference/python.mdx
+++ b/web/pages/docs/reference/python.mdx
@@ -186,6 +186,10 @@ Returns the best checkpoint for this experiment, according to the primary metric
 
 Delete this experiment and its checkpoints.
 
+### `experiment.refresh()`
+
+Update this experiment with the latest data from the repository. This is useful when you are doing analysis of an experiment that is running, and you want to get the latest data.
+
 ### `experiment.plot()`
 
 Plot a single metric in this experiment.
