Fix missing highlighting in docs
Signed-off-by: Ben Firshman <ben@firshman.co.uk>

--- a/web/pages/docs/guides/inference.mdx
+++ b/web/pages/docs/guides/inference.mdx
@@ -29,7 +29,7 @@ def train():
 
 Then you can use this in your inference script to get the model back:
 
-```
+```python
 import replicate
 experiment = replicate.experiments.get("e510303")
 checkpoint = experiment.best()
