update docs with new --path arg
Signed-off-by: Andreas Jansson <andreas@replicate.ai>

--- a/web/pages/docs/reference/cli.mdx
+++ b/web/pages/docs/reference/cli.mdx
@@ -71,6 +71,7 @@ replicate checkout <experiment or checkpoint ID> [flags]
   -f, --force                     Force checkout without prompt, even if the directory is not empty
   -h, --help                      help for checkout
   -o, --output-directory string   Output directory (defaults to working directory or directory with replicate.yaml in it)
+      --path string               A specific file or directory to checkout (defaults to all files or directory in checkpoint/experiment)
   -R, --repository string         Repository URL (e.g. 's3://my-replicate-bucket' (if omitted, uses repository URL from replicate.yaml)
 
       --color                      Display color in output (default true)
