Hide Python packages in show by default
Lots of Python packages make `replicate show` hard to use.

If there are interesting ones, show them. Otherwise, show at most 5.
If `-all` is passed, show them all.

Signed-off-by: Ben Firshman <ben@firshman.co.uk>

--- a/web/pages/docs/reference/cli.mdx
+++ b/web/pages/docs/reference/cli.mdx
@@ -237,6 +237,7 @@ replicate show <experiment or checkpoint ID> [flags]
 ### Flags
 
 ```
+      --all                 Show all information
   -h, --help                help for show
       --json                Print output in JSON format
   -R, --repository string   Repository URL (e.g. 's3://my-replicate-bucket' (if omitted, uses repository URL from replicate.yaml)
